@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: help.c,v 1.19 2006/07/07 18:06:30 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: help.c,v 1.20 2007/06/21 21:55:23 tlecomte Exp $"); }
 #endif
 
 /* GNUPLOT - help.c */
@@ -150,6 +150,7 @@ static TBOOLEAN Ambiguous __PROTO((struct key_s * key, size_t len));
 /* Help output */
 static void PrintHelp __PROTO((struct key_s * key, TBOOLEAN *subtopics));
 static void ShowSubtopics __PROTO((struct key_s * key, TBOOLEAN *subtopics));
+static void OutLine_InternalPager __PROTO((const char *line));
 
 #if defined(PIPES)
 static FILE *outfile;		/* for unix pager, if any */
@@ -510,7 +511,7 @@ PrintHelp(
 #endif
     }
     ShowSubtopics(key, subtopics);
-    OutLine("\n");
+    OutLine_InternalPager("\n");
 
     EndOutput();
 }
@@ -566,7 +567,7 @@ ShowSubtopics(
 			strcat(line, ":\n");
 		    } else
 			strcpy(line, "\nHelp topics available:\n");
-		    OutLine(line);
+		    OutLine_InternalPager(line);
 		    *line = NUL;
 		}
 		starts[stopics++] = start;
@@ -610,7 +611,7 @@ ShowSubtopics(
 	    pos++;
 	    if (pos >= PER_LINE) {
 		(void) strcat(line, "\n");
-		OutLine(line);
+		OutLine_InternalPager(line);
 		*line = NUL;
 		pos = 0;
 	    }
@@ -619,7 +620,7 @@ ShowSubtopics(
 	/* put out the last line */
 	if (subt > 0 && pos > 0) {
 	    (void) strcat(line, "\n");
-	    OutLine(line);
+	    OutLine_InternalPager(line);
 	}
     }
 #else /* COLUMN_HELP */
@@ -651,7 +652,7 @@ ShowSubtopics(
 		}
 	    }
 	    (void) strcat(line, "\n");
-	    OutLine(line);
+	    OutLine_InternalPager(line);
 	}
     }
 #endif /* COLUMN_HELP */
@@ -699,6 +700,34 @@ OutLine(const char *line)
     /* built-in dumb pager */
     /* leave room for prompt line */
     if (pagelines >= SCREENSIZE - 2) {
+	fputs("Press return for more: ", stderr);
+#if defined(ATARI) || defined(MTOS)
+	do
+	    c = tos_getch();
+	while (c != '\x04' && c != '\r' && c != '\n');
+#else
+	do
+	    c = getchar();
+	while (c != EOF && c != '\n');
+#endif
+	pagelines = 0;
+    }
+    fputs(line, stderr);
+    pagelines++;
+}
+
+/* Same as Outline, but does not go through the external pager.
+ * Used for the list of available subtopics because if it would be passed to
+ * 'less' (for example), the list would not be displayed anymore after 'less'
+ * has exited and the user is asked for a subtopic */
+void
+OutLine_InternalPager(const char *line)
+{
+    int c;			/* dummy input char */
+
+    /* built-in dumb pager */
+    /* leave room for prompt line */
+    if (outfile == stderr && pagelines >= SCREENSIZE - 2) {
 	fputs("Press return for more: ", stderr);
 #if defined(ATARI) || defined(MTOS)
 	do
